resizes boxes on smaller devices, resized and corrects position of ticked icons to fit both box sizes

--- a/app/index.css
+++ b/app/index.css
@@ -149,7 +149,7 @@ main .container {
   background-color: #070707;
   cursor: pointer;
   padding: 15px;
-  margin: 0 8px;
+  margin: 0 10px;
 }
 @media screen and (max-width: 500px) {
   .content .square {
@@ -182,8 +182,8 @@ main .container {
 }
 @media screen and (max-width: 500px) {
   .content .circle {
-    height: 138px;
-    width: 146px;
+    height: 158px;
+    width: 166px;
   }
 }
 
@@ -199,8 +199,8 @@ main .container {
 }
 @media screen and (max-width: 500px) {
   .inner-cirlce {
-    height: 2.2rem;
-    width: 2.2rem;
+    height: 2.5rem;
+    width: 2.5rem;
   }
 }
 
@@ -268,14 +268,14 @@ main .container {
 
 /** green tick styling **/
 .box-wrap .fa-check-circle {
-  opacity: 0;
+  opacity: 1;
 }
 
 .fa-check-circle {
   z-index: 100;
   position: relative;
-  top: 20%;
-  left: 90%;
+  top: 14%;
+  left: 81%;
   width: 5rem;
   height: 5rem;
   margin: 0;
