--- a/app/stylesheets/fav-music.scss
+++ b/app/stylesheets/fav-music.scss
@@ -108,7 +108,7 @@ main .container {
   background-color: #070707;
   cursor: pointer;
   padding: 15px;
-  margin: 0 8px;
+  margin: 0 10px;
   @media screen and (max-width: 500px) { // phone
     padding: 1rem;
   }
@@ -135,8 +135,8 @@ main .container {
   border-radius: 150px;
   cursor: pointer;
   @media screen and (max-width: 500px) { // phone
-    height: 138px;
-    width: 146px;
+    height: 158px;
+    width: 166px;
   }
 }
 .inner-cirlce {
@@ -149,8 +149,8 @@ main .container {
   left: 50%;
   transform: translate(-50%, -50%);
   @media screen and (max-width: 500px) { // phone
-    height: 2.2rem;
-    width: 2.2rem;
+    height: 2.5rem;
+    width: 2.5rem;
   }
 }
 .genre-name {
@@ -207,15 +207,15 @@ main .container {
 /** green tick styling **/
 .box-wrap {
   .fa-check-circle {
-    opacity: 0;
+    opacity: 1;
   }
 }
 
 .fa-check-circle {
   z-index: 100;
   position: relative;
-  top: 20%;
-  left: 90%;
+  top: 14%;
+  left: 81%;
   width: 5rem;
   height: 5rem;
   margin: 0;
